--- a/portfolio/src/components/About.css
+++ b/portfolio/src/components/About.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   padding: 0px 0px;
-  background-color: lightblue;
+  background-color: red;
   height: 100vh;
   width:100vw;
 }
