--- a/portfolio/src/components/Experience.css
+++ b/portfolio/src/components/Experience.css
@@ -4,7 +4,7 @@
   gap: 50px;
   justify-content: center;
   padding: 20px;
-  background-color: lightblue;
+  background-color: green;
   width:100vw;
 }
 
